--- a/src/pages/instagram/index.scss
+++ b/src/pages/instagram/index.scss
@@ -1,7 +1,116 @@
 .pagina-instagram
 {
     min-height: 100vh;
-    background-color: #000;
+    background-color: #252525;
+    color: #FFF;
     display: flex;
 
+    main
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-grow: 1;
+
+        padding: 15px;
+
+        > h3
+        {
+            font-size: 12px;
+            font-weight: 700;
+            padding: 8px 17px;
+            border-radius: 100px;
+
+            background-color: #373737;
+            margin-bottom: 18px;
+        }
+        
+        nav
+        {
+            display: flex;
+            gap: 16px;
+
+            margin-bottom: 50px;
+        }
+
+        nav div
+        {
+            padding: 2px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 100px;
+            background: linear-gradient(105deg, #FCB900 0%, #E90167 55.73%, #BD00B1 100%);;
+        }
+
+        nav div > img
+        {
+            width: 100%;
+            height: 100%;
+        }
+
+        .sec-input
+        {
+            display: flex;
+            flex-direction: column;
+            padding: 37px 40px;
+
+            background: linear-gradient(180deg, #353535 0%, rgba(60, 60, 60, 0.00) 74.48%);
+        }
+
+        .container-input
+        {
+            display: flex;
+        }
+
+        .input
+        {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 10px;
+
+            label
+            {
+                font-size: 14px;
+                font-weight: 600;
+
+                width: 65px;
+                text-align: right;
+            }
+
+            input, textarea
+            {
+                background-color: #E0E0E0;
+                border: none;
+                border-radius: 4px;
+                flex-grow: 1;
+            }
+        }
+
+        .sec-input button
+        {
+            width: calc(100% - 75px);
+            margin-top: 18px;
+            padding: 7px;
+            align-self: flex-end;
+
+            font-size: 14px;
+            font-weight: 700;
+            color: #FFF;
+            background-color: #C60844;
+            border: none;
+            border-radius: 3px;
+
+            cursor: pointer;
+        }
+
+        .sec-posts
+        {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            gap: 20px;
+        }
+    }
 }
