fixed na barra lateral do instagram

--- a/src/components/instagram/barraLateral/index.scss
+++ b/src/components/instagram/barraLateral/index.scss
@@ -1,5 +1,9 @@
 .instagram-barra-lateral
 {
+    position: fixed;
+    left: 0;
+    height: 100vh;
+
     display: flex;
     flex-direction: column;
     gap: 45px;
